add line algo and docs.