@@ -19,36 +19,20 @@ package com.tencent.angel.spark.examples.cluster
 
 import com.tencent.angel.conf.AngelConf
 import com.tencent.angel.ps.storage.matrix.PartitionSourceArray
+import com.tencent.angel.spark.context.PSContext
 import com.tencent.angel.spark.ml.core.ArgsUtil
-import com.tencent.angel.spark.ml.embedding.line2.LINE
+import com.tencent.angel.spark.ml.embedding.line.LINE
+import com.tencent.angel.spark.ml.graph.utils.GraphIO
 import com.tencent.angel.spark.ml.util.SparkUtils
-import org.apache.spark.sql.{DataFrame, SparkSession}
-import org.apache.spark.sql.types._
+import org.apache.spark.sql.DataFrame
 import org.apache.spark.{SparkConf, SparkContext}
 
 object LINEExample {
   def main(args: Array[String]): Unit = {
     val params = ArgsUtil.parse(args)
-    val conf = new SparkConf().setMaster("yarn-cluster").setAppName("LINE")
-
-    val oldModelInput = params.getOrElse("oldModelPath", null)
-    if(oldModelInput != null) {
-      conf.set(s"spark.hadoop.${AngelConf.ANGEL_LOAD_MODEL_PATH}", oldModelInput)
-    }
-
-    val mode = params.getOrElse("mode", "yarn-cluster")
-    val sc = start(mode)
-
-    val executorJvmOptions = " -verbose:gc -XX:-PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:<LOG_DIR>/gc.log " +
-      "-XX:+UseG1GC -XX:MaxGCPauseMillis=1000 -XX:G1HeapRegionSize=32M " +
-      "-XX:InitiatingHeapOccupancyPercent=50 -XX:ConcGCThreads=4 -XX:ParallelGCThreads=4 "
-    println(s"executorJvmOptions = ${executorJvmOptions}")
-    conf.set("spark.executor.extraJavaOptions", executorJvmOptions)
-
-    //PSContext.getOrCreate(sc)
-
-    val input = params.getOrElse("input", null)
+    val input = params.getOrElse("input", "")
     val output = params.getOrElse("output", "")
+    val oldModelInput = params.getOrElse("oldModelPath", "")
 
     val embeddingDim = params.getOrElse("embedding", "10").toInt
     val numNegSamples = params.getOrElse("negative", "5").toInt
@@ -56,31 +40,28 @@ object LINEExample {
 
     val stepSize = params.getOrElse("stepSize", "0.1").toFloat
     val batchSize = params.getOrElse("batchSize", "10000").toInt
-    val numPartitions = params.getOrElse("numParts", "10").toInt
-    val withSubSample = params.getOrElse("subSample", "true").toBoolean
-    val withRemapping = params.getOrElse("remapping", "true").toBoolean
+    val psPartitionNum = params.getOrElse("psPartitionNum", "10").toInt
+    val dataPartitionNum = params.getOrElse("dataPartitionNum", "100").toInt
+    val withRemapping = params.getOrElse("remapping", "false").toBoolean
     val order = params.get("order").fold(2)(_.toInt)
     val saveModelInterval = params.getOrElse("saveModelInterval", "10").toInt
     val checkpointInterval = params.getOrElse("checkpointInterval", "2").toInt
     val saveMeta = params.getOrElse("saveMeta", "false").toBoolean
 
     val isWeight = params.getOrElse("isWeight", "false").toBoolean
-    val srcIndex = params.getOrElse("srcIndex", "0").toInt
-    val dstIndex = params.getOrElse("dstIndex", "1").toInt
-    val weightIndex = params.getOrElse("weightIndex", "2").toInt
     val sep = params.getOrElse("sep", "space") match {
       case "space" => " "
       case "comma" => ","
       case "tab" => "\t"
     }
 
-    var edges:DataFrame = load(input, isWeight, sep)
-
-    val numCores = SparkUtils.getNumCores(conf)
-
+    val sc = start()
+    val numCores = SparkUtils.getNumCores(sc.getConf)
     // The number of partition is more than the cores. We do this to achieve dynamic load balance.
-    val numDataPartitions = (numCores * 6.25).toInt
-    println(s"numDataPartitions=$numDataPartitions")
+    var numDataPartitions = (numCores * 3.25).toInt
+    if (dataPartitionNum > numDataPartitions) {
+      numDataPartitions = dataPartitionNum
+    }
 
     val line = new LINE()
       .setEmbedding(embeddingDim)
@@ -90,7 +71,7 @@ object LINEExample {
       .setEpochNum(numEpoch)
       .setBatchSize(batchSize)
       .setPartitionNum(numDataPartitions)
-      .setPSPartitionNum(numPartitions)
+      .setPSPartitionNum(psPartitionNum)
       .setIsWeighted(isWeight)
       .setRemapping(withRemapping)
       .setSaveModelInterval(saveModelInterval)
@@ -99,12 +80,13 @@ object LINEExample {
       .setOldModelPath(oldModelInput)
       .setSaveMeta(saveMeta)
 
+    val edges: DataFrame = GraphIO.load(input, isWeight, sep = sep)
     line.transform(edges)
-
     line.save(output, numEpoch, saveMeta)
+    stop()
   }
 
-  def start(mode: String): SparkContext = {
+  def start(): SparkContext = {
     val conf = new SparkConf()
 
     // Set specific parameters for LINE
@@ -113,42 +95,22 @@ object LINEExample {
     conf.set("spark.hadoop." + AngelConf.ANGEL_PS_BACKUP_AUTO_ENABLE, "false")
     conf.set("spark.hadoop." + AngelConf.ANGEL_PS_JVM_USE_PARALLEL_GC, "true")
     conf.set("spark.hadoop." + AngelConf.ANGEL_PS_JVM_PARALLEL_GC_USE_ADAPTIVE_SIZE, "false")
-    conf.set("io.file.buffer.size", "16000000");
-    conf.set("spark.hadoop.io.file.buffer.size", "16000000");
+    conf.set("io.file.buffer.size", "16000000")
+    conf.set("spark.hadoop.io.file.buffer.size", "16000000")
 
     // Add jvm parameters for executors
     val executorJvmOptions = " -verbose:gc -XX:-PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:<LOG_DIR>/gc.log " +
       "-XX:+UseG1GC -XX:MaxGCPauseMillis=1000 -XX:G1HeapRegionSize=32M " +
       "-XX:InitiatingHeapOccupancyPercent=50 -XX:ConcGCThreads=4 -XX:ParallelGCThreads=4 "
-    println(s"executorJvmOptions = ${executorJvmOptions}")
+    println(s"executorJvmOptions = $executorJvmOptions")
     conf.set("spark.executor.extraJavaOptions", executorJvmOptions)
-
-    conf.setMaster(mode)
     conf.setAppName("LINE")
     val sc = new SparkContext(conf)
-    //PSContext.getOrCreate(sc)
     sc
   }
 
-  def load(input:String, isWeighted:Boolean, sep: String = " ") = {
-    val ss = SparkSession.builder().getOrCreate()
-
-    val schema = if (isWeighted) {
-    StructType(Seq(
-      StructField("src", StringType, nullable = false),
-      StructField("dst", StringType, nullable = false),
-      StructField("weight", FloatType, nullable = false)
-    ))
-  } else {
-    StructType(Seq(
-      StructField("src", StringType, nullable = false),
-      StructField("dst", StringType, nullable = false)
-    ))
-  }
-    ss.read
-      .option("sep", sep)
-      .option("header", "false")
-      .schema(schema)
-      .csv(input)
+  def stop(): Unit = {
+    PSContext.stop()
+    SparkContext.getOrCreate().stop()
   }
 }
